--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
   "dependencies": {
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
+    "cors": "^2.7.1",
     "debug": "~2.2.0",
     "dotenv": "^2.0.0",
     "express": "~4.13.1",
     "jade": "~1.11.0",
-    "monk": "^1.0.1",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0"
   }
